2009-08-31  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/writer.hpp: 

	* src/simd/waitset.hpp: 
	* src/simd/waitset.cpp: 

	* src/simd/topic.hpp: 

	* src/simd/runtime.hpp: 

	* src/simd/reader.hpp: 

	* src/simd/memory.cpp: 

	* src/simd/condition.hpp: 
	* src/simd/condition.cpp: 

	  Made Topic(s)/DataReader(s)/DataWriter(s) as reference
	  objects. Now in the API the boost::shared_ptr is no more
	  visible, this is used internally yet the user gets reference
	  sematics for all the DDS entities. Othern than making the API
	  simpler, this also makes it safer.

	  
2009-08-25  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/condition.hpp:
	* src/simd/waitset.hpp: Fixed implementation for ExecutableConditions.

2009-08-21  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/simd.hpp:
	* src/simd/simd.cpp: Main header file that application need to include.

	* src/simd/waitset.hpp:
	* src/simd/waitset.cpp: Implemented SIMD executable waitset.

	* src/simd/reader.hpp: Added registration logic for listener events.

2009-08-17  Angelo Corsaro  <angelocorsaro@gmail.com>

	* demo/ping/ping-*.cpp: updated to reflect changes in the SIMD API.

2009-08-16  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/condition.cpp:
	* src/simd/condition.hpp:
	* src/simd/reader.hpp

	  Added support for waitset and conditions. SIMD also provides a
	  new kind of Condition which can dispatch call to a specified
	  functor. 

2009-08-12  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/*.hpp: removed forward declaration of classes within
	the simd namespace to work around some parsing issues that were
	preventing proper code-aid in NetBeans.

	* configure: Now also adds required BOOST libraries from what
	installed on the target machien (previously BOOST 1.39.0 was
	assumed)
	
	* README: Removed reference to the SWATCH project.
	
	* src/simd/writer.hpp: addedd missing "return" on write methods.